@@ -24,7 +24,8 @@ import gtk
 import gettext
 import gconf
 
-from Widgets import GConfCheckButton
+from Widgets import Mediator
+from Factory import Factory
 
 gettext.install("ubuntu-tweak", unicode = True)
 
@@ -32,8 +33,8 @@ computer_icon = \
 {
 	"label" : _("Show \"Computer\" icon on desktop"),
 	"rename" : _("Rename the \"Computer\" icon: "),
-	"visible" : "/apps/nautilus/desktop/computer_icon_visible",
-	"name" : "/apps/nautilus/desktop/computer_icon_name",
+	"visible" : "computer_icon_visible",
+	"name" : "computer_icon_name",
 	"icon" : "gnome-fs-client"
 }
 
@@ -41,8 +42,8 @@ home_icon = \
 {
 	"label" : _("Show \"Home\" icon on desktop"),
 	"rename" : _("Rename the \"Home\" icon: "),
-	"visible" : "/apps/nautilus/desktop/home_icon_visible",
-	"name" : "/apps/nautilus/desktop/home_icon_name",
+	"visible" : "home_icon_visible",
+	"name" : "home_icon_name",
 	"icon" : "gnome-fs-home"
 }
 	
@@ -50,124 +51,87 @@ trash_icon = \
 {
 	"label" : _("Show \"Trash\" icon on desktop"),
 	"rename" : _("Rename the \"Trash\" icon: "),
-	"visible" : "/apps/nautilus/desktop/trash_icon_visible",
-	"name" : "/apps/nautilus/desktop/trash_icon_name",
+	"visible" : "trash_icon_visible",
+	"name" : "trash_icon_name",
 	"icon" : "gnome-fs-trash-empty"
 }
 
 desktop_icon = (computer_icon, home_icon, trash_icon)
 
-class GConfEntry(gtk.Entry):
-	def activated_cb(self, widget, data = None):
-		client = gconf.client_get_default()
-		client.set_string(data, self.get_text())
+class DesktopIcon(gtk.VBox, Mediator):
+	def __init__(self, item):
+		gtk.VBox.__init__(self)
 
-	def __init__(self, key):
-		gtk.Entry.__init__(self)
-		self.connect("activate", self.activated_cb, key)
+		self.show_button = Factory.create("cgconfcheckbutton", item["label"], item["visible"], self)
+		self.pack_start(self.show_button, False, False, 0)
 
-		client = gconf.client_get_default()
-		name = client.get_string(key)
+		self.show_hbox = gtk.HBox(False, 10)
+		self.pack_start(self.show_hbox, False, False, 0)
 
-		if name:
-			self.set_text(name)
-		else:
-			self.set_text(_("Unset"))
+		if not self.show_button.get_active():
+			self.show_hbox.set_sensitive(False)
 
-class Icon(gtk.VBox):
+		icon = gtk.image_new_from_icon_name(item["icon"], gtk.ICON_SIZE_DIALOG)
+		self.show_hbox.pack_start(icon, False, False, 0)
+
+		self.rename_button = Factory.create("strgconfcheckbutton", item["rename"], item["name"], self)
+		vbox = gtk.VBox(False, 5)
+		self.show_hbox.pack_start(vbox, False, False, 0)
+		vbox.pack_start(self.rename_button, False, False, 0)
+
+		self.entry = Factory.create("gconfentry", item["name"])
+		if not self.rename_button.get_active():
+			self.entry.set_sensitive(False)
+		vbox.pack_start(self.entry, False, False, 0)
+
+	def colleague_changed(self):
+		self.show_hbox.set_sensitive(self.show_button.get_active())
+		self.entry.set_sensitive(self.rename_button.get_active())
+
+class Icon(gtk.VBox, Mediator):
 	"""Desktop Icon settings"""
 
 	def __init__(self):
-		gtk.VBox.__init__(self)
+		gtk.VBox.__init__(self, False, 5)
 
-		main_vbox = gtk.VBox(False, 5)
-		main_vbox.set_border_width(5)
-		self.pack_start(main_vbox, False, False, 0)
+		self.set_border_width(5)
 
 		label = gtk.Label()
 		label.set_markup(_("<b>Desktop Icon settings</b>"))
 		label.set_alignment(0, 0)
-		main_vbox.pack_start(label, False, False, 0)
+		self.pack_start(label, False, False, 0)
 
-		main_button = GConfCheckButton(_("Show desktop icons"), "/apps/nautilus/preferences/show_desktop")
-		main_button.connect("toggled", self.button_toggled, "/apps/nautilus/preferences/show_desktop")
-		main_vbox.pack_start(main_button, False, False, 0)
+		self.show_button = Factory.create("cgconfcheckbutton", _("Show desktop icons"), "show_desktop", self)
+		self.pack_start(self.show_button, False, False, 0)
 
-		main_button.box = gtk.HBox(False, 10)
-		main_vbox.pack_start(main_button.box, False, False,0)
+		self.show_button_box = gtk.HBox(False, 10)
+		self.pack_start(self.show_button_box, False, False,0)
 
-		if not main_button.get_active():
-			main_button.box.set_sensitive(False)
+		if not self.show_button.get_active():
+			self.show_button_box.set_sensitive(False)
 
 		label = gtk.Label(" ")
-		main_button.box.pack_start(label, False, False, 0)
+		self.show_button_box.pack_start(label, False, False, 0)
 
-		main_button.vbox = gtk.VBox(False, 5)
-		main_button.box.pack_start(main_button.vbox, False, False, 0)
+		vbox = gtk.VBox(False, 5)
+		self.show_button_box.pack_start(vbox, False, False, 0)
 
 		client = gconf.client_get_default()
-		for element in desktop_icon:
-			button = GConfCheckButton(element["label"], element["visible"])
-			button.connect("toggled", self.button_toggled, element["visible"])
-			main_button.vbox.pack_start(button, False, False, 0)
+		for item in desktop_icon:
+			vbox.pack_start(DesktopIcon(item), False, False, 0)
 
-			button.box = gtk.HBox(False, 10)
-			main_button.vbox.pack_start(button.box, False, False, 0)
+		button = Factory.create("gconfcheckbutton", _("Show \"Network\" icon on desktop"), "network_icon_visible")
+		vbox.pack_start(button, False, False, 0)
 
-			if not button.get_active():
-				button.box.set_sensitive(False)
+		button = Factory.create("gconfcheckbutton", _("Show Mounted Volumes on desktop"), "volumes_visible")
+		vbox.pack_start(button, False, False, 0)
 
-			icon = gtk.image_new_from_icon_name(element["icon"], gtk.ICON_SIZE_DIALOG)
-			button.box.pack_start(icon, False, False, 0)
+		button = Factory.create("gconfcheckbutton", _("Use Home Folder as the desktop(Need Logout)"), "desktop_is_home_dir")
+		vbox.pack_start(button, False, False, 0)
 
-			button_rename = GConfCheckButton(element["rename"], element["name"], extra = self.button_toggled_to_entry)
-			vbox= gtk.VBox(False, 5)
-			button.box.pack_start(vbox, False, False, 0)
-			vbox.pack_start(button_rename, False, False, 0)
-
-			button_rename.entry = GConfEntry(element["name"])
-			if not button_rename.get_active():
-				button_rename.entry.set_sensitive(False)
-			vbox.pack_start(button_rename.entry, False, False, 0)
-
-		button = GConfCheckButton(_("Show \"Network\" icon on desktop"), "/apps/nautilus/desktop/network_icon_visible")
-		main_button.vbox.pack_start(button, False, False, 0)
-
-		button = GConfCheckButton(_("Show Mounted Volumes on desktop"), "/apps/nautilus/desktop/volumes_visible")
-		main_button.vbox.pack_start(button, False, False, 0)
-
-		button = GConfCheckButton(_("Use Home Folder as the desktop(Need Logout)"), "/apps/nautilus/preferences/desktop_is_home_dir")
-		main_button.vbox.pack_start(button, False, False, 0)
-
-	def button_toggled(self, widget ,data = None):
-		client = gconf.client_get_default()
-		value = client.get(data)
-
-		if value.type == gconf.VALUE_BOOL:
-			if widget.get_active():
-				client.set_bool(data, True)
-				widget.box.set_sensitive(True)
-			else:
-				client.set_bool(data, False)
-				widget.box.set_sensitive(False)
-
-	def button_toggled_to_entry(self, widget ,data = None):
-		if widget.get_active():
-			widget.entry.set_sensitive(True)
-		else:
-			client = gconf.client_get_default()
-			client.unset(data)
-			widget.entry.set_text(_("Unset"))
-			widget.entry.set_sensitive(False)
+	def colleague_changed(self):
+		self.show_button_box.set_sensitive(self.show_button.get_active())
 
 if __name__ == "__main__":
-	win = gtk.Window()
-	win.connect('destroy', lambda *w: gtk.main_quit())
-        win.set_title("Document Templates")
-        win.set_default_size(650, 400)
-        win.set_border_width(8)
-
-        win.add(Icon())
-
-        win.show_all()
-	gtk.main()
+	from Utility import Test
+	Test(Icon)
